<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/startFragment">

    <fragment
        android:id="@+id/cartFragment"
        android:name="com.example.midtermapp.ui.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_cart" />
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.example.midtermapp.ui.DetailFragment"
        android:label="@string/title_detail"
        tools:layout="@layout/fragment_detail" >
        <argument
            android:name="id"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/listItemFragment"
        android:name="com.example.midtermapp.ui.ListItemFragment"
        android:label="@string/title_list_item"
        tools:layout="@layout/fragment_list_item" >
        <action
            android:id="@+id/action_listItemFragment_to_detailFragment"
            app:destination="@id/detailFragment"
            app:enterAnim="@android:anim/fade_in"
            app:popEnterAnim="@android:anim/fade_out" />
        <action
            android:id="@+id/action_listItemFragment_to_mapsFragment"
            app:destination="@id/mapsFragment" />

    </fragment>
    <fragment
        android:id="@+id/startFragment"
        android:name="com.example.midtermapp.ui.StartFragment"
        android:label="fragment_start"
        tools:layout="@layout/fragment_start" >
        <action
            android:id="@+id/action_startFragment_to_listItemFragment"
            app:destination="@id/listItemFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/mapsFragment"
        android:name="com.example.midtermapp.ui.MapsFragment"
        android:label="map"
        tools:layout="@layout/fragment_maps" />
</navigation>