<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".UI.DetailFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:id="@+id/thumbnail_img"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/shoes1" />
        <TextView
            android:id="@+id/name_tv"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/thumbnail_img"
            app:layout_constraintTop_toBottomOf="@id/thumbnail_img"
            android:layout_marginTop="10dp"
            android:text="Dame 8"
            android:textSize="30dp"
            />
        <TextView
            android:id="@+id/price_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="$113.00"
            android:textSize="20dp"
            app:layout_constraintTop_toBottomOf="@id/thumbnail_img"
            app:layout_constraintRight_toRightOf="@id/thumbnail_img"
            app:layout_constraintBaseline_toBaselineOf="@id/name_tv"/>

        <TextView
            android:id="@+id/size_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/size"
            app:layout_constraintLeft_toLeftOf="@id/thumbnail_img"
            app:layout_constraintTop_toBottomOf="@id/name_tv" />

        <RadioGroup
            android:id="@+id/size_selection_radio_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/thumbnail_img"
            app:layout_constraintStart_toStartOf="@id/thumbnail_img"
            app:layout_constraintTop_toBottomOf="@+id/size_label_tv"
            android:orientation="horizontal"
            >
            <RadioButton
                android:id="@+id/size_42"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="42"
                android:textAlignment="center"
                android:button="@color/white"
                android:background="@drawable/radio_selector"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"/>
            <RadioButton
                android:id="@+id/size_43"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="43"
                android:textAlignment="center"
                android:button="@color/white"
                android:background="@drawable/radio_selector"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"/>
            <RadioButton
                android:id="@+id/size_44"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="44"
                android:textAlignment="center"
                android:button="@color/white"
                android:background="@drawable/radio_selector"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"/>
            <RadioButton
                android:id="@+id/size_45"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="45"
                android:textAlignment="center"
                android:button="@color/white"
                android:background="@drawable/radio_selector"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"/>
            <RadioButton
                android:id="@+id/size_46"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="46"
                android:textAlignment="center"
                android:button="@color/white"
                android:background="@drawable/radio_selector"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"/>
        </RadioGroup>

        <TextView
            android:id="@+id/description_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/description"
            android:visibility="invisible"
            app:layout_constraintLeft_toLeftOf="@id/thumbnail_img"
            app:layout_constraintTop_toBottomOf="@id/size_selection_radio_group" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/expandable_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:visibility="invisible"
            android:src="@drawable/ic_keyboard_arrow_down_24"
            app:layout_constraintLeft_toRightOf="@id/description_label_tv"
            app:layout_constraintTop_toBottomOf="@id/size_selection_radio_group"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/description_tv"
            android:visibility="invisible"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/place_holder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/thumbnail_img"
            app:layout_constraintRight_toRightOf="@id/thumbnail_img"
            app:layout_constraintTop_toBottomOf="@id/description_label_tv" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/add_to_cart"
            android:textColor="@color/white"
            app:backgroundTint="@color/red_200"
            app:cornerRadius="50dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/thumbnail_img"
            app:layout_constraintRight_toRightOf="@id/thumbnail_img" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="9dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addBtn" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
